<resources>
    <string name="app_name">Attendance App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="admin_photo_desc">Admin Profile Photo</string>
    <string-array name="user_types">
        <item>Admin</item>
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

        <string name="cancel">Cancel</string>

    <!-- Room Names Array -->
    <string-array name="room_names">
        <item>Room 101</item>
        <item>Room 102</item>
        <item>Room 103</item>
        <item>Krushna Room</item>
    </string-array>

    <!-- Room Coordinates Array (format: "latitude,longitude") -->
    <string-array name="room_coordinates">
        <item>40.7128,-74.0060</item>
        <item>34.0522,-118.2437</item>
        <item>51.5074,-0.1278</item>
        <item>18.4534592, 73.8199877</item> <!-- Added Room Coordinates -->
    </string-array>

    <string name="profile_image_desc">Profile Image</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="action_next_step">Next Step</string>
    <string name="status_icon">GPS Status Icon</string>
    <string name="gps_verification_status">GPS Verification Status</string>
    <string name="gps_verification_failed">GPS Verification Failed</string>
    <string name="retry">Retry Please</string>
    <string name="location_icon">Location Icon</string>
    <string name="action_previous_step">Previous</string>
    <string name="exit">Exit</string>

    <string name="biometric_verification_error">Biomatric UnsuccessFul!</string>
    <string name="biometric_verification_success">Biomatric Varification started</string>

    <string name="proceed">Procedding to marking attendace</string>
    <string name="biometric_icon">Biomatric icon</string>

        <!-- Success Fragment Strings -->
        <string name="attendance_marked_successfully">Attendance marked successfully!</string>
        <string name="student_name">Student Name: %1$s</string>
        <string name="roll_no">Roll No: %2$s</string>
        <string name="date_time">Date and Time: %3$s</string>
        <string name="lecture_name">Lecture Name: %4$s</string>
        <string name="subject_name">Subject Name: %5$s</string>
        <string name="go_to_dashboard">Go to Dashboard</string>
        <string name="success_icon">success_icon</string>
    <string name="class_name">class name</string>
    <string name="filter">Fillter</string>
    <string name="search">search</string>

    <string-array name="division_array">
        <item>Division A</item>
        <item>Division B</item>
        <item>Division C</item>
        <!-- Add more divisions as needed -->
    </string-array>


    <string name="ok">OK</string>
    <string-array name="teachers_array">
        <item>Teacher 1</item>
        <item>Teacher 2</item>
        <!-- Add more teachers here -->
    </string-array>
    <string-array name="lecture_types_array">
        <item>Lecture</item>
        <item>Lab Session</item>
        <item>Practical</item>
        <item>Seminar</item>
        <item>Webinar</item>
        <item>Event</item>
        <!-- Add more lecture types here -->
    </string-array>

    <string name="save">Save the timetable</string>
</resources>